--- a/404.md
+++ b/404.md
@@ -4,4 +4,12 @@ title: 404
 permalink: /404.html
 ---
 
+<center>
+
 This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
+
+<div style="margin: 20% auto">
+
+![](/assets/404.gif)
+
+</center>
