--- a/404.md
+++ b/404.md
@@ -4,12 +4,15 @@ title: 404
 permalink: /404.html
 ---
 
-<center>
+
+<div align="center">
 
 This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
 
-<div style="margin: 20% auto">
+<div style="margin:20%">
 
 ![](/assets/404.gif)
 
-</center>
+</div>
+
+</div>
