--- a/404.md
+++ b/404.md
@@ -7,12 +7,8 @@ permalink: /404.html
 
 <div align="center">
 
-{{ This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}). }}
+This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
 
-<div style="margin:20%">
-
-{{ ![](/assets/404.gif) }}
-
-</div>
+<div style="margin:20%">{{ ![](/assets/404.gif) }}</div>
 
 </div>
