--- a/404.md
+++ b/404.md
@@ -9,5 +9,7 @@ permalink: /404.html
 
 This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
 
-<div style="margin:20%">{{ ![](/assets/404.gif) }}</div>
+<div style="margin:20%">
+    <img src="/assets/404.gif"></img>
+</div>
 
