--- a/404.md
+++ b/404.md
@@ -9,7 +9,6 @@ permalink: /404.html
 
 This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
 
-<div style="margin:20%">
-    <img src="/assets/404.gif"></img>
-</div>
+
+<div style="margin:20%"><img src="/assets/404.gif"></img></div>
 
