--- a/404.md
+++ b/404.md
@@ -6,7 +6,9 @@ permalink: /404.html
 
 
 
-<div align=center>This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
+<div align=center>
+
+This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
 
 
 <div style="margin:20%"><img src="/assets/404.gif"></div>
