--- a/404.md
+++ b/404.md
@@ -8,7 +8,7 @@ permalink: /404.html
 
 <div align=center>
 
-<p>This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).<p>
+<p>This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).</p>
 
 
 <div style="margin:20%"><img src="/assets/404.gif"></div>
