--- a/404.md
+++ b/404.md
@@ -5,11 +5,10 @@ permalink: /404.html
 ---
 
 
+This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
 
 <div align=center>
 
-<p>This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).</p>
 
-
-<div style="margin:20%"><img src="/assets/404.gif"></div>
+<div style="margin:20% 0 5% 0"><img src="/assets/404.gif"></div>
 
