--- a/404.md
+++ b/404.md
@@ -5,7 +5,7 @@ permalink: /404.html
 ---
 
 
-This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
+<p align="center">This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
 
 <div align=center>
 
