--- a/404.md
+++ b/404.md
@@ -5,7 +5,8 @@ permalink: /404.html
 ---
 
 
-<p align="center">This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
+This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '//', '/' }}).
+{: style="text-align: center;"}
 
 <div align=center>
 
