--- a/404.md
+++ b/404.md
@@ -11,5 +11,5 @@ This page does not exist. [Go back]({{ "/" | prepend: site.baseurl | replace: '/
 <div align=center>
 
 
-<div style="margin:5% 0 5% 0"><img src="/assets/404.gif"></div>
+<div style="margin:5% 0 5% 0;user-drag: none;-webkit-user-drag: none;user-select: none;-moz-user-select: none;-webkit-user-select: none;-ms-user-select: none;"><img src="/assets/404.gif"></div>
 
